--- a/irp/src/main/resources/application.properties
+++ b/irp/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-#Tomcat server port number 8080
+
+#Tomcat server port number 8081
 #server.port=7070
 #context path default value /
 #DB properties
 spring.datasource.url=jdbc:mysql://localhost:3306/irp
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=devank
 # JPA properties
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
