Devank backend notice board changes

--- a/irp/src/main/resources/application.properties
+++ b/irp/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #DB properties
 spring.datasource.url=jdbc:mysql://localhost:3306/irp
 spring.datasource.username=root
-spring.datasource.password=devank
+spring.datasource.password=root
 # JPA properties
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
