--- a/irp/src/main/resources/application.properties
+++ b/irp/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/irp
 spring.datasource.username=root
 spring.datasource.password=root
 # JPA properties
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #logging.level.org.springframework.orm.hibernate5=DEBUG
